--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "recharts": "^1.0.0-beta.6"
+    "recharts": "^1.0.0-beta.6",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
