--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "recharts": "^1.0.0-beta.6",
