--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "recharts": "^1.0.0-beta.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
