--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project_1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ti-tar.github.io/tasker",
   "dependencies": {
     "material-ui": "^0.20.0",
     "moment": "^2.19.4",
@@ -18,6 +19,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy" : "npm run build&&gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
