--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "deploy": "npm run build&&gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0"
-  }
+    "eslint": "^4.13.1",
+    "gh-pages": "^1.1.0",
+    "jest": "^22.0.3"
+  },
+  "eslintConfig": {}
 }
