--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "dotenv": "^4.0.0",
     "material-ui": "^0.20.0",
     "moment": "^2.19.4",
     "react": "^16.2.0",
